# ComfyUI_VNCCS

./: .gitignore  CLAUDE.md  Changelog.md  FixPlan.md  README.md  TEST_CHECKLIST.md  VN_Step2_QWEN_ClothesGenerator_v2.5.json  __init__.py  control_center.json  diag_imports.py  diagnostic_worldmirror.py  pyproject.toml  qwen_workflow.json  requirements.txt  run_linearity_and_match.py  run_single_examples.py  simulate_delta_mapping.py  simulate_linear_mapping.py  simulate_vnccs_issue.py  test_compare_original.py  test_vnccs_weights.py  utils.py
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/: copilot-instructions.md
CharacterData/: mh_skeleton.py
character_template/: character_tags.json  outfits.json
docs/: ARCHITECTURE.md  NODES.md  WIDGETS.md
emotions-config/: emotions.json  expression_tags.txt
nodes/: __init__.py  _safe_utils.py  _vendored_birefnet.py  advanced_ply_viewer.py  background_generator.py  background_generator_v2.py  batch_saver.py  character_cloner.py  character_creator.py  character_creator_v2.py  character_generator.py  character_selector.py  character_studio.py  clothes_designer.py  common_nodes.py  dataset_generator.py  emotion_generator.py  emotion_generator_v2.py  emotion_preview_generator.py  emotion_preview_loop_manager.py  migration_assistant.py  model_path_utils.py  pose_generator.py  qwen_upscaler.py  qwen_vl.py  sampler_scheduler_picker.py  service_nodes.py  sheet_crop.py  sheet_manager.py  sprite_generator.py  sprite_manager.py  subgraph_pipeline.py  vnccs_api.py  vnccs_chroma_key_experimental.py  vnccs_control_center.py  vnccs_panorama_mapper.py  vnccs_pipe.py  vnccs_preprocessor.py  vnccs_preprocessor_v2.py  vnccs_qwen_detailer.py  (+5 more)
pose_utils/: __init__.py  bone_colors.py  pose_renderer.py  skeleton_512x1536.py
qweneditutils/: nodes_exp.py
tests/: conftest.py  test_batch_saver.py  test_character_cloner.py  test_character_creator.py  test_character_creator_v1.py  test_character_generator_security.py  test_chroma_key.py  test_clothes_designer.py  test_common_nodes.py  test_control_center.py  test_dataset_generator.py  test_migration_assistant.py  test_pipe.py  test_pose_generator.py  test_qwen_encoder.py  test_qwen_vl.py  test_sampler_scheduler.py  test_service_nodes.py  test_sheet_manager.py  test_utils.py  test_vnccs_api.py  test_vnccs_utils_nodes.py  test_worldplay_nodes.py  verify_vnccs_fixes.py
(+77 files in other folders)
