[project]
name = "vnccs"
description = "Visual Novel Character Creation Suite"
version = "1.0.0"
license = {file = "LICENSE"} 

dependencies = ["torch>=1.9.0", "numpy>=1.21.0", "Pillow>=8.0.0", "opencv-python>=4.5.0"]

[project.urls]
Repository = "https://github.com/AHEKOT/ComfyUI_VNCCS"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/AHEKOT/ComfyUI_VNCCS/wiki"
"Bug Tracker" = "https://github.com/AHEKOT/ComfyUI_VNCCS/issues"

[tool.comfy]
PublisherId = "vnccs"
DisplayName = "Visual Novel Character Creation Suite"
Icon = "https://github.com/AHEKOT/ComfyUI_VNCCS/blob/main/images/VNCCS_LOGO.png"

